--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,11 +4,12 @@ sqlalchemy==2.0.25
 asyncpg==0.29.0
 psycopg2-binary==2.9.9
 alembic==1.13.1
+greenlet==3.0.3
 
 # LangChain ecosystem
 langchain==0.1.4
 langchain-community==0.0.16
-langchain-core==0.1.15
+langchain-core>=0.1.16,<0.2
 
 # Ollama
 ollama==0.1.6
